--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
 		"checkJs": true,
 		"paths": {
 			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"]
+			"$lib/*": ["src/lib/*"],
+			"$components/*": ["src/components/*"],
+			"$stores/*": ["src/stores/*"],
+			"$actions/*": ["src/actions/*"],
+			"$content/*": ["src/content/*"]
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
