--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -4,13 +4,15 @@
             "id": "01",
             "name": "Custom Fishing",
             "description": "Reinvent the fishing system in Minecraft. With all new custom rewards creates a unique fishing system for any server out there!",
-            "link": "https://www.spigotmc.org/resources/53634/"
+            "link": "https://www.spigotmc.org/resources/53634/",
+            "repo": ""
         },
         {
             "id": "02",
             "name": "Custom Tab",
             "description": "An all new way to display server information. Dynamic text animations in the tab provide an exciting way to display server information and keep players engaged.",
-            "link": "https://www.spigotmc.org/resources/78200/"
+            "link": "https://www.spigotmc.org/resources/78200/",
+            "repo": ""
 		}
     ]
 }
