--- a/content/projects.json
+++ b/content/projects.json
@@ -12,7 +12,7 @@
           "description": "CustomTab is a Minecraft Plugin that re-invents information display in a custom way. It allows the usually boring player tab list to be customized with unique layouts, animating text elements, and even custom images!",
           "skills": ["Kotlin", "SpigotMC"],
           "link": "https://www.spigotmc.org/resources/78200/",
-          "source": ""
+          "source": "https://github.com/IlluzionzDev/CustomTab"
         }
     ]
 }
