--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fontsource/inter": "^4.5.14",
+        "@fontsource/poppins": "^4.5.10",
         "framer-motion": "^8.0.2",
         "next": "13.0.0",
         "react": "18.0.0",
         "react-dom": "18.0.0",
-        "typewriter-effect": "^2.19.0"
+        "typewriter-effect": "^2.19.0",
+        "classnames": "^2.3.2",
+        "react-icons": "^4.6.0"
     },
     "devDependencies": {
         "@testing-library/react": "^13.4.0",
