--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": true,
+    "printWidth": 80,
+    "singleQuote": true,
+    "endOfLine": "lf",
+    "bracketSpacing": true
 }
