--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
         },
         "typeRoots": ["node_modules/@types"]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/sitemap.xml.js"],
     "exclude": ["node_modules"]
 }
