--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "dependencies": {
         "@fontsource/inter": "^4.5.14",
         "@fontsource/poppins": "^4.5.10",
+        "@illuzionz-studios/design-system": "^0.0.3",
+        "classnames": "^2.3.2",
         "framer-motion": "^8.0.2",
         "next": "13.0.0",
         "react": "18.0.0",
         "react-dom": "18.0.0",
-        "typewriter-effect": "^2.19.0",
-        "classnames": "^2.3.2",
-        "react-icons": "^4.6.0"
+        "react-icons": "^4.6.0",
+        "typewriter-effect": "^2.19.0"
     },
     "devDependencies": {
         "@testing-library/react": "^13.4.0",
         "@types/node": "17.0.23",
         "@types/react": "17.0.43",
         "@types/react-dom": "17.0.14",
-        "sass": "^1.39.0",
-        "scss": "^0.2.4",
         "eslint": "8.12.0",
         "eslint-config-next": "12.1.4",
+        "sass": "^1.39.0",
+        "scss": "^0.2.4",
         "typescript": "4.6.3"
     }
 }
