--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "next": "13.0.0",
         "react": "18.0.0",
         "react-dom": "18.0.0",
-        "react-icons": "^4.11.0"
+        "react-icons": "^4.11.0",
+        "styled-components": "6.0.5"
     },
     "devDependencies": {
         "@testing-library/react": "^13.4.0",
